fixed alignment issue with side bar.

--- a/css/css.css
+++ b/css/css.css
@@ -25,8 +25,6 @@ font-size: xx-large;
     justify-content: center;
 
 }
-.large-icon-wrap {
-}
 .large-icon-wrapper-design div, .large-icon-wrapper-develop div, .large-icon-wrapper-support div, .large-icon-wrapper-host div {
     border-radius: 50%;
     height: 110px;
@@ -129,7 +127,7 @@ display: flex;
     height: 80px;
     float: left;
     margin-right: 15px;
-
+    border: #E6E6E6 5px solid;
 
 }
 .big-font {
@@ -147,19 +145,12 @@ display: flex;
 .tweet {
     font-family: 'Abel', sans-serif;
 }
-
-
-
-
  .last-p {
      text-align: center;
+     margin-bottom: 50px;
  }
 .lg-container {
     margin-right: 40px;
     margin-left: 40px;
 }
-
-
-
-
 
